[package]
name = "vtx-sdk"
version = "0.1.7"
edition = "2021"
description = "Official SDK for developing VTX plugins using Rust and WebAssembly."
license = "Apache-2.0"
repository = "https://github.com/vtxdeo/vtx-sdk"
documentation = "https://docs.rs/vtx-sdk"
keywords = ["wasm", "plugin", "sdk", "vtx"]
categories = ["wasm", "api-bindings"]

include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "build.rs"
]

[features]
default = []
meta = []

[dependencies]
wit-bindgen = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 生产环境策略:
vtx-protocol = "3.2.1"

# 开发环境策略:
#vtx-protocol = { git = "https://github.com/vtxdeo/vtx-protocol.git", branch = "master" }

[build-dependencies]
# 生产环境策略:
vtx-protocol = "3.2.1"

# 开发环境策略:
#vtx-protocol = { git = "https://github.com/vtxdeo/vtx-protocol.git", branch = "master" }

[lib]
crate-type = ["rlib"]